feat: 방문 인증 생성 API의 응답 및 요청 DTO 수정
